--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
+# API Port
+API_PORT=7001
+API_VERSION=2
+API_SECRET=98hbun98h #Used for creating a JWT. Can be anything 
+
 # Postgres Live
 # DB_HOST=127.0.0.1
 # DB_DRIVER=postgres
-# API_SECRET=98hbun98h #Used for creating a JWT. Can be anything 
 # DB_USER=steven
 # DB_PASSWORD=
 # DB_NAME=fullstack_api
@@ -10,7 +14,6 @@
 # Postgres Test
 # TestDbHost=127.0.0.1
 # TestDbDriver=postgres
-# TestApiSecret=98hbun98h
 # TestDbUser=steven
 # TestDbPassword=
 # TestDbName=fullstack_api_test
@@ -19,7 +22,6 @@
 # Mysql Live
 # DB_HOST=127.0.0.1
 # DB_DRIVER=mysql 
-# API_SECRET=98hbun98h #Used for creating a JWT. Can be anything 
 # DB_USER=steven
 # DB_PASSWORD=here
 # DB_NAME=fullstack_mysql
@@ -28,7 +30,6 @@
 # # Mysql Test
 # TestDbHost=127.0.0.1
 # TestDbDriver=mysql
-# TestApiSecret=98hbun98h
 # TestDbUser=steven
 # TestDbPassword=here
 # TestDbName=fullstack_api_test
@@ -36,13 +37,8 @@
 
 # sqlite live
 DB_DRIVER=sqlite3
-API_SECRET=98hbun98h #Used for creating a JWT. Can be anything 
 DB_NAME=fullstack.sqlite
 
 # sqlite test 
 TestDbDriver=sqlite3
-TestApiSecret=98hbun98h
 TestDbName=fullstack_test.sqlite
-
-# API Port
-API_PORT=7001
