--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 # API Port
 API_PORT=7001
-API_VERSION=2.1.0
 API_SECRET=98hbun98h #Used for creating a JWT. Can be anything 
 
 # Postgres Live
@@ -10,14 +9,7 @@ API_SECRET=98hbun98h #Used for creating a JWT. Can be anything
 # DB_PASSWORD=
 # DB_NAME=fullstack_api
 # DB_PORT=5432 
-
-# Postgres Test
-# TestDbHost=127.0.0.1
-# TestDbDriver=postgres
-# TestDbUser=steven
-# TestDbPassword=
-# TestDbName=fullstack_api_test
-# TestDbPort=5432
+# DB_DEBUG=false 
 
 # Mysql Live
 # DB_HOST=127.0.0.1
@@ -26,19 +18,9 @@ API_SECRET=98hbun98h #Used for creating a JWT. Can be anything
 # DB_PASSWORD=here
 # DB_NAME=fullstack_mysql
 # DB_PORT=3306 #Default mysql port
-
-# # Mysql Test
-# TestDbHost=127.0.0.1
-# TestDbDriver=mysql
-# TestDbUser=steven
-# TestDbPassword=here
-# TestDbName=fullstack_api_test
-# TestDbPort=3306
+# DB_DEBUG=false 
 
 # sqlite live
 DB_DRIVER=sqlite3
 DB_NAME=fullstack.sqlite
-
-# sqlite test 
-TestDbDriver=sqlite3
-TestDbName=fullstack_test.sqlite
+DB_DEBUG=false
