C:/Program Files/Git/portfolio/daily partilly fixed

--- a/.env
+++ b/.env
@@ -23,4 +23,5 @@ API_SECRET=98hbun98h #Used for creating a JWT. Can be anything
 # sqlite live
 DB_DRIVER=sqlite3
 DB_NAME=fullstack.sqlite
-DB_DEBUG=false
+DB_DEBUG=true
+DB_MIRROR=false
