Google sign-in added

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 # API Port
-API_PORT=7001
+API_PORT=:7001
 API_SECRET=98hbun98h #Used for creating a JWT. Can be anything 
+API_GOOGLE_CLIENT=124906771619-abbfhrrabom1dpct4kfga2vlskre3po6.apps.googleusercontent.com
+TB_ID=856967587:AAEVWjlNNolEJBNp1gBHopkppTrLXcvBGig
 
 # Postgres Live
 # DB_HOST=127.0.0.1
